# AnimalHub

./: .gitignore  AZURE_DEPLOYMENT.md  README.md  about.html  adopt.html  app.py  contact.html  gallery.html  gunicorn.conf.py  index.html  models.py  pyproject.toml
.github/workflows/: azure-static-web-apps-calm-sand-05af73b03.yml
css/: styles.css
instance/: pets.db
static/css/: custom.css
static/js/: main.js
templates/: animal_details.html  base.html  contact.html  index.html
