[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Pet Adoption Hub - A comprehensive pet adoption platform"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.38",
    "python-dotenv>=1.0.0",
    "werkzeug>=3.0.1"
]